INTYGFV-15832: Updated to toList from Collectors.toList